Удалил лишние дто. Добавил тестов.